--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,51 @@
-lib
+# Build outputs.
+/bin
+/lib
+
+# Intermediate files.
+.vs
+/build
+Debug/
+Release
+obj/
+/obj
+/.sass-cache
+*.pyc
+
+# I leave a temporary Wren script at the top level so that I can quickly test
+# stuff.
+/scratch.wren
+
+# The baseline file is machine-specific, so doesn't get checked in.
+/test/benchmark/baseline.txt
+
+# VSCode project files.
+.vscode
+
+# XCode user-specific stuff.
+xcuserdata/
+
+# Allow Visual Studio project files.
+!wren/
+!wren_lib/
+
+# Visual Studio cache files.
+.vs/
+ipch/
+*.aps
+*.ncb
+*.opensdf
+*.sdf
+*.cachefile
+
+# Visual Studio User-specific files.
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# macOS XCode build cache
+deps/libuv/build/XCBuildData/
+
+# macOS
+.DS_Store
